; ModuleID = '/home/carl/AnghaBench/vlc/modules/video_output/wayland/extr_registry.c_vwncmp.c'
source_filename = "/home/carl/AnghaBench/vlc/modules/video_output/wayland/extr_registry.c_vwncmp.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.vlc_wl_global = type { i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, i8*)* @vwncmp to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @vwncmp(i8* %0, i8* %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca %struct.vlc_wl_global*, align 8
  %6 = alloca %struct.vlc_wl_global*, align 8
  store i8* %0, i8** %3, align 8
  store i8* %1, i8** %4, align 8
  %7 = load i8*, i8** %3, align 8
  %8 = bitcast i8* %7 to %struct.vlc_wl_global*
  store %struct.vlc_wl_global* %8, %struct.vlc_wl_global** %5, align 8
  %9 = load i8*, i8** %4, align 8
  %10 = bitcast i8* %9 to %struct.vlc_wl_global*
  store %struct.vlc_wl_global* %10, %struct.vlc_wl_global** %6, align 8
  %11 = load %struct.vlc_wl_global*, %struct.vlc_wl_global** %5, align 8
  %12 = getelementptr inbounds %struct.vlc_wl_global, %struct.vlc_wl_global* %11, i32 0, i32 0
  %13 = load i64, i64* %12, align 8
  %14 = load %struct.vlc_wl_global*, %struct.vlc_wl_global** %6, align 8
  %15 = getelementptr inbounds %struct.vlc_wl_global, %struct.vlc_wl_global* %14, i32 0, i32 0
  %16 = load i64, i64* %15, align 8
  %17 = icmp slt i64 %13, %16
  br i1 %17, label %18, label %19

18:                                               ; preds = %2
  br label %28

19:                                               ; preds = %2
  %20 = load %struct.vlc_wl_global*, %struct.vlc_wl_global** %5, align 8
  %21 = getelementptr inbounds %struct.vlc_wl_global, %struct.vlc_wl_global* %20, i32 0, i32 0
  %22 = load i64, i64* %21, align 8
  %23 = load %struct.vlc_wl_global*, %struct.vlc_wl_global** %6, align 8
  %24 = getelementptr inbounds %struct.vlc_wl_global, %struct.vlc_wl_global* %23, i32 0, i32 0
  %25 = load i64, i64* %24, align 8
  %26 = icmp sgt i64 %22, %25
  %27 = zext i1 %26 to i32
  br label %28

28:                                               ; preds = %19, %18
  %29 = phi i32 [ -1, %18 ], [ %27, %19 ]
  ret i32 %29
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
